--- a/resources/Azias/css/nibblepoker.lu.css
+++ b/resources/Azias/css/nibblepoker.lu.css
@@ -4,6 +4,11 @@
 	src: url("/resources/Quantum/Quantum.otf") format('opentype');
 }
 
+/* Preventing images from being saved with the right-click */
+img.no-save {
+	pointer-events: none;
+}
+
 /* Background for the main container and its cards */
 div#body-overlay {
 	position: absolute;
@@ -91,11 +96,20 @@ div#body-overlay {
 	image-rendering: pixelated;
 }
 
-hr, hr.dark-mode {
+hr, hr.dark-mde, hr.subtle {
 	background-color: rgba(0, 0, 0, 0) !important;
 	background: rgb(93,95,97);
 	background: radial-gradient(circle, rgba(83,85,87,0.8) 0%, rgba(65,67,69,0.65) 75%, rgba(17,20,23,0) 100%);
-	opacity: 0.75;
+	opacity: 0.1;
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
+
+img.content-search-image {
+	max-height: 128px;
+}
+div.content-tag-container a:not(:first-child) {
+	margin-left: 10px;
 }
 
 @media (min-width: 993px) {
@@ -112,6 +126,22 @@ hr, hr.dark-mode {
 		clip-path: polygon(4px 0%, 100% 0, 100% 100%, 4px 100%, 0 calc(100% - 4px), 0 4px);
 	}
 }
+
+/* Custom dynamic sizing */
+.w-lg-p90 {
+	width: 95% !important;
+}
+@media (max-width: 992px) {
+	.w-95 {
+		width: 95% !important;
+	}
+}
+@media (min-width: 993px) {
+	.w-lg-p90 {
+		width: 90% !important;
+	}
+}
+
 
 /* Trash */
 /*.lang-icon {
