--- a/resources/Azias/css/nibblepoker.lu.css
+++ b/resources/Azias/css/nibblepoker.lu.css
@@ -111,8 +111,40 @@ hr, hr.dark-mde, hr.subtle {
 	margin-bottom: 5px;
 }
 
+div.content-presentation-container {
+	margin-bottom: 10px;
+	min-height: 128px;
+	display: flex;
+}
+div.content-presentation-container > a {
+	width: 100%;
+	min-height: 128px;
+	text-align: justify;
+	color: var(--dm-card-text-color);
+}
+div.content-presentation-container > a:hover {
+	color: var(--dm-card-text-color);
+	text-decoration: none;
+}
+div.content-search-image-container {
+	background: var(--dm-card-bg-color) url("/resources/Azias/imgs/3px-tile-0.2.png") repeat fixed center center;
+	box-shadow: inset 0 0 25px 1px rgba(255,255,255,0.05);
+	border-radius: 8px;
+	width: 128px;
+	height: 128px;
+	margin-right: 10px;
+	float: left;
+}
 img.content-search-image {
+	max-width: 128px;
 	max-height: 128px;
+	border-radius: 8px;
+	box-shadow: 0 0 5px 1px rgba(0,0,0,0.3);
+}
+h3.content-search-title {
+	float: none;
+	margin: 0;
+	text-align: left;
 }
 div.content-tag-container a:not(:first-child) {
 	margin-left: 10px;
