--- a/resources/Azias/css/nibblepoker.lu.css
+++ b/resources/Azias/css/nibblepoker.lu.css
@@ -4,11 +4,6 @@
 	src: url("/resources/Quantum/Quantum.otf") format('opentype');
 }
 
-/* Preventing images from being saved with the right-click */
-img.no-save {
-	pointer-events: none;
-}
-
 /* Background for the main container and its cards */
 div#body-overlay {
 	position: absolute;
@@ -28,13 +23,11 @@ div#body-overlay {
 	background-image: url("/resources/Azias/imgs/3px-tile-0.1.png");
 }
 
-/* Helpers */
+/* Utilities, helpers & misc */
+img.no-save {
+	pointer-events: none;
+}
 .no-select {
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
 	user-select: none;
 }
 .quantum {
@@ -59,7 +52,6 @@ div#body-overlay {
 	font-size: 3.0rem!important;
 }
 .text-super-muted {
-	/*color: #6E6E6E;/**/
 	color: #89898A;
 }
 .square-corners {
@@ -67,6 +59,10 @@ div#body-overlay {
 }
 .stretch-align-items {
 	align-items: stretch;
+}
+.py-01 {
+	padding-top: 0.01rem!important;
+	padding-bottom: 0.01rem!important;
 }
 
 /* Unique rules */
@@ -101,7 +97,6 @@ div#body-overlay {
 	filter: invert(100%);
 	image-rendering: pixelated;
 }
-
 hr, hr.dark-mde, hr.subtle {
 	background-color: rgba(0, 0, 0, 0) !important;
 	background: rgb(93,95,97);
@@ -111,7 +106,8 @@ hr, hr.dark-mde, hr.subtle {
 	margin-bottom: 5px;
 }
 
-/* Content search */
+/* Content */
+/* Content > Search */
 @media (max-width: 992px) {
 	:root {
 		--content-search-image-size: 96px;
@@ -161,6 +157,7 @@ div.content-tag-container a:not(:first-child) {
 	margin-left: 10px;
 }
 
+/* Gradient used on home page's applications card */
 @media (min-width: 993px) {
 	.l-lab-web {
 		background: linear-gradient(90deg, rgba(101,144,134,0.3) 0%, rgba(101,144,134,0.2) 1.5px, rgba(101,144,134,0.0) 7px);
@@ -176,7 +173,7 @@ div.content-tag-container a:not(:first-child) {
 	}
 }
 
-/* Custom dynamic sizing */
+/* Custom dynamic sizing for main containers in primary ".content-wrapper" */
 .w-lg-p90 {
 	width: 95% !important;
 }
@@ -192,26 +189,16 @@ div.content-tag-container a:not(:first-child) {
 }
 
 /* Fixes */
-/* TODO: Fix it when it is closed */
+/* No idea where this is used */
 div.last-inner-collapse-border-fix {
+	/* TODO: Fix it when it is closed */
 	border: var(--collapse-content-border-width) solid var(--dm-collapse-content-border-color) !important;
 	border-top: 0 !important;
 	border-bottom-left-radius: var(--collapse-content-border-radius) !important;
 	border-bottom-right-radius: var(--collapse-content-border-radius) !important;
 }
 
-
-/* Trash */
-/*.lang-icon {
-	height: var(--base-line-height);
-	max-height: var(--base-line-height);
-	height: var(--base-font-size);
-	max-height: var(--base-font-size);
-}*/
-/*.page-wrapper.with-transitions.with-sidebar .content-wrapper {
-	transition: none;
-}/**/
-/*div#body-overlay.error {
-	background-image: url("/resources/Azias/imgs/psychedelic.png");
-	opacity: 0.075;
-}/**/
+/* Fix for ".content-wrapper" on mobile which can be too large due to the main title */
+.content-wrapper {
+	max-width: 100vw;
+}
