Added excel password remover project, Added videos to composer Update composer.php, excel-worksheet-password-remover.json, and 3 more files...

--- a/resources/Azias/css/nibblepoker.lu.css
+++ b/resources/Azias/css/nibblepoker.lu.css
@@ -254,3 +254,9 @@ div.last-inner-collapse-border-fix {
 code.w-full {
 	white-space: pre;
 }
+
+video {
+	/* https://css-tricks.com/fluid-width-video/ */
+	width: 100% !important;
+	height: auto !important;
+}
