Improved slightly error pages, Added card's corner triangular button Update .gitignore, 403.php, and 7 more files...

--- a/resources/Azias/scss/nibblepoker.lu.scss
+++ b/resources/Azias/scss/nibblepoker.lu.scss
@@ -18,6 +18,7 @@
 @import 'halfmoon/page/contact';
 
 /* Halfmoon > Elements */
+@import 'halfmoon/element/card';
 @import 'halfmoon/element/code';
 @import 'halfmoon/element/containers';
 @import 'halfmoon/element/glider';
