--- a/resources/Azias/scss/standalone/fonts.scss
+++ b/resources/Azias/scss/standalone/fonts.scss
@@ -14,3 +14,11 @@
 	// Same as above.
 	text-transform: uppercase;
 }
+
+.r-45 {
+	transform: rotate(45deg);
+}
+
+.r-135 {
+	transform: rotate(135deg);
+}
