--- a/resources/Azias/scss/halfmoon/page/home.scss
+++ b/resources/Azias/scss/halfmoon/page/home.scss
@@ -14,4 +14,8 @@
 		background: linear-gradient(90deg, rgba(156,23,34,0.4) 0%, rgba(156,23,34,0.3) 1.5px, rgba(156,23,34,0.0) 7px);
 		border-radius: 5px 0 0 5px;
 	}
+	.l-lab-game {
+		background: linear-gradient(90deg, rgba(180,134,77,0.4) 0%, rgba(180,134,77,0.3) 1.5px, rgba(180,134,77,0.0) 7px);
+		border-radius: 5px 0 0 5px;
+	}
 }
