--- a/resources/Azias/scss/halfmoon/fixes.scss
+++ b/resources/Azias/scss/halfmoon/fixes.scss
@@ -26,7 +26,7 @@ div.last-inner-collapse-border-fix {
 	max-width: 100vw;
 }
 
-// Removes tha wasted stace on Chrome !
+// Removes the wasted space on Chrome !
 .overflow-x-scroll {
 	overflow-x: auto !important;
 }
