--- a/resources/Azias/scss/halfmoon/page/home.scss
+++ b/resources/Azias/scss/halfmoon/page/home.scss
@@ -18,4 +18,8 @@
 		background: linear-gradient(90deg, rgba(180,134,77,0.4) 0%, rgba(180,134,77,0.3) 1.5px, rgba(180,134,77,0.0) 7px);
 		border-radius: 5px 0 0 5px;
 	}
+	.l-lab-dotnet {
+		background: linear-gradient(90deg, rgba(81,43,212,0.4) 0%, rgba(81,43,212,0.3) 1.5px, rgba(81,43,212,0.0) 7px);
+		border-radius: 5px 0 0 5px;
+	}
 }
