--- a/resources/Azias/scss/nibblepoker.lu.scss
+++ b/resources/Azias/scss/nibblepoker.lu.scss
@@ -25,3 +25,6 @@
 @import 'halfmoon/element/hr';
 @import 'halfmoon/element/image';
 @import 'halfmoon/element/video';
+
+/* Highlight.JS */
+@import 'highlightjs/fixes';
