Added screenshot gallery to lscom and composer backend Update composer.php, lscom-cli-dotnet.json, and 4 more files...

--- a/resources/Azias/scss/nibblepoker.lu.scss
+++ b/resources/Azias/scss/nibblepoker.lu.scss
@@ -24,6 +24,7 @@
 @import 'halfmoon/element/glider';
 @import 'halfmoon/element/hr';
 @import 'halfmoon/element/image';
+@import 'halfmoon/element/modal';
 @import 'halfmoon/element/video';
 
 /* Highlight.JS */
