Fixed some composer elements, Updated Excel-Password-Remover Update utils.php, composer.php, and 14 more files...

--- a/resources/NibblePoker/scss/nibblepoker.scss
+++ b/resources/NibblePoker/scss/nibblepoker.scss
@@ -53,3 +53,4 @@
 @import 'site/table';  // Uses copied paddings for cells & ugly rounding fix
 @import 'site/code';  // Uses copied borders, roundings and paddings
 @import 'site/content';  // Uses fixed sizes and floats
+@import 'site/video';
