--- a/resources/NibblePoker/scss/site/text.scss
+++ b/resources/NibblePoker/scss/site/text.scss
@@ -83,11 +83,13 @@ a:not(.bland-link) {
 // And now for the headings, the exceptions keep popping up :,)
 // TODO: Add a simple and nicer divider.
 .heading-main {
-	i {
-		//margin-left: 0.25rem;
-		margin-right: 0.4rem;
-		padding-right: 0.1rem;
-		width: 1.75rem !important;
-		text-align: center;
+	> h2, > h3, >h4 {
+		> i {
+			//margin-left: 0.25rem;
+			margin-right: 0.4rem;
+			padding-right: 0.1rem;
+			width: 1.75rem !important;
+			text-align: center;
+		}
 	}
 }
