--- a/resources/NibblePoker/scss/site/backgrounds.scss
+++ b/resources/NibblePoker/scss/site/backgrounds.scss
@@ -7,3 +7,11 @@
 .bkgd-grid {
 	background: #{$color-background-main-headings} url("/resources/NibblePoker/images/backgrounds/3px-tile-0.4.png") repeat scroll center center;
 }
+
+.bkgd-squares {
+	background: #{$color-background-main-headings} url("/resources/NibblePoker/images/backgrounds/bright-squares-p100-0.125.png") repeat scroll center center;
+}
+
+.bkgd-math {
+	background: #{$color-background-main-headings} url("/resources/NibblePoker/images/backgrounds/old-mathematics-v2-0.25.png") repeat scroll center center;
+}
