--- a/resources/NibblePoker/scss/site/layout.scss
+++ b/resources/NibblePoker/scss/site/layout.scss
@@ -54,8 +54,13 @@ main, .sidebar {
 	transition-timing-function: cubic-bezier(.25,.8,.25,1.1);
 }
 
-.heading-main > h2 {
-	display: flex;
-	align-items: center;
-	justify-content: left;
+.heading-main {
+	> h2, > h3, > h4 {
+		display: flex;
+		align-items: center;
+		justify-content: left;
+	}
+	&.heading-dyn-width-1 {
+		min-width: 75%;
+	}
 }
