Added scripts for content, Improved tables and buttons Update scripts.php, sidebar.php, and 20 more files...

--- a/resources/NibblePoker/scss/core/spacing/global.scss
+++ b/resources/NibblePoker/scss/core/spacing/global.scss
@@ -37,3 +37,9 @@
 /* Utilities > Spacing > Global > Others */
 @include global-spacing-maker("m", "margin", "auto", auto);
 @include global-spacing-maker("p", "padding", "auto", auto);
+
+
+/* Utilities > Spacing > Global > Manual Extras */
+.p-mxs {
+	padding: calc(#{$margin-base-size} * 0.375);
+}
