--- a/resources/NibblePoker/scss/site/table.scss
+++ b/resources/NibblePoker/scss/site/table.scss
@@ -35,6 +35,12 @@ table.stylish {
 		}
 	}
 	
+	&.table-v-center {
+		tr, td {
+			vertical-align: middle;
+		}
+	}
+	
 	// Fixing border issues when using rounded corners by using a "fake" one using the background's color.
 	// It will look like utter shit when rounded on firefox because its rendering engine cannot clip rounded corners apparently.
 	// I guess that's what being at less than 3% of the market share does to you and your ability to care about basic shit.
