--- a/resources/NibblePoker/scss/site/text.scss
+++ b/resources/NibblePoker/scss/site/text.scss
@@ -4,6 +4,10 @@ p, a, h1, h2, h3, td {
 	color: #{$color-text-regular-normal};
 }
 
+p {
+	line-height: 1.2;
+}
+
 // Setting colors for bland links.
 // Done before muted text to make the footer privacy link possible.
 a {
@@ -18,6 +22,10 @@ a:hover {
 		color: #{$color-link-hover};
 		text-decoration: underline;
 	}
+}
+
+.t-half-muted {
+	opacity: 65%;
 }
 
 .t-muted {
@@ -36,6 +44,7 @@ a:hover {
 
 .t-logo-text {
 	font-size: 1.775em;
+	line-height: 1;
 }
 
 a:not(.bland-link) {
