--- a/resources/NibblePoker/scss/site/image.scss
+++ b/resources/NibblePoker/scss/site/image.scss
@@ -20,7 +20,8 @@
 	filter: grayscale(100%);
 	mix-blend-mode: multiply;
 	opacity: 40%;
-	width: 100%;
+	// Fixes the width to the size of the sidebar minus its padding. (15rem - 1rem * 2)
+	width: 13rem;
 	height: auto;
 }
 
@@ -36,10 +37,14 @@
 	position: absolute;
 	bottom: 1.5em;
 	right: 1.5em;
-	filter: drop-shadow(0 0 0.5rem #0000007F);
+	filter: drop-shadow(0 0 0.25rem #0000007F);
 	mix-blend-mode: multiply;
 	//opacity: 0.25;
 	opacity: 0.2;
+	
+	// Preventing the selection and dragging of the image for aesthetic reasons.
+	user-drag: none;
+	user-select: none;
 }
 
 // Logo colors
