--- a/resources/NibblePoker/scss/site/table.scss
+++ b/resources/NibblePoker/scss/site/table.scss
@@ -21,36 +21,36 @@ table.stylish {
 		border-right: 1.5px solid #{$color-table-border};
 	}
 	
-	// Applying .p-xs and .p-s to all cells if needed
-	// See 'core/spacing' for more info.
-	&.table-p-xs {
-		td, th {
-			padding: calc(#{$margin-base-size} * 0.5);
-		}
-	}
-	
-	&.table-h-p-s {
-		th {
-			padding: calc(#{$margin-base-size} * 0.75);
-		}
-	}
-	
-	&.table-p-s {
-		td, th {
-			padding: calc(#{$margin-base-size} * 0.75);
-		}
-	}
-	
-	&.table-v-center {
-		tr, td {
-			vertical-align: middle;
-		}
-	}
-	
 	// Fixing border issues when using rounded corners by using a "fake" one using the background's color.
 	// It will look like utter shit when rounded on firefox because its rendering engine cannot clip rounded corners apparently.
 	// I guess that's what being at less than 3% of the market share does to you and your ability to care about basic shit.
 	&.border {
 		background-color: #{$color-border-all};
+	}
+}
+
+// Applying .p-xs and .p-s to all cells if needed
+// See 'core/spacing' for more info.
+.table-p-xs {
+	td, th {
+		padding: calc(#{$margin-base-size} * 0.5);
+	}
+}
+
+.table-h-p-s {
+	th {
+		padding: calc(#{$margin-base-size} * 0.75);
+	}
+}
+
+.table-p-s {
+	td, th {
+		padding: calc(#{$margin-base-size} * 0.75);
+	}
+}
+
+.table-v-center {
+	tr, td {
+		vertical-align: middle;
 	}
 }
