Revamped layout, Added lang selection, Added auto lang detection, Removed trash, Other minor improvements Update .htaccess, body-1.php, and 50 more files...

--- a/resources/NibblePoker/scss/config.scss
+++ b/resources/NibblePoker/scss/config.scss
@@ -2,3 +2,5 @@
 
 // Add the "w-000px"/"h-000x" classes.
 $undefined-add-px-sizing: false;
+
+$nibblepoker-background-root: "/resources/NibblePoker/images/backgrounds";
