--- a/resources/NibblePoker/scss/external/quantum.scss
+++ b/resources/NibblePoker/scss/external/quantum.scss
@@ -3,6 +3,8 @@
 
 // Massive thanks to "fontsquirrel.com" for allowing me to properly subset and compress the font <3
 
+/* External > Quantum */
+
 @font-face {
 	font-family: 'Quantum';
 	src: url('/resources/Quantum/Quantum.min.woff2') format('woff2'),
