--- a/resources/NibblePoker/scss/site/backgrounds.scss
+++ b/resources/NibblePoker/scss/site/backgrounds.scss
@@ -1,17 +1,27 @@
 // NibblePoker.lu CSS - (C) 2023 Bozet Herwin
 
+/* Site > Misc > Backgrounds */
+
 .bkgd-blank {
 	background: #{$color-background-main-headings};
 }
 
+.bkgd-surround {
+	background: #{$color-background-surround};
+}
+
+.bkgd-blank-dark {
+	background: mix($color-background-main, $color-background-surround, 50%);
+}
+
 .bkgd-grid {
-	background: #{$color-background-main-headings} url("/resources/NibblePoker/images/backgrounds/3px-tile-0.4.png") repeat scroll center center;
+	background: #{$color-background-main-headings} url("#{$nibblepoker-background-root}/3px-tile-0.4.png") repeat scroll center center;
 }
 
 .bkgd-squares {
-	background: #{$color-background-main-headings} url("/resources/NibblePoker/images/backgrounds/bright-squares-p100-0.125.png") repeat scroll center center;
+	background: #{$color-background-main-headings} url("#{$nibblepoker-background-root}/bright-squares-p100-0.125.png") repeat scroll center center;
 }
 
 .bkgd-math {
-	background: #{$color-background-main-headings} url("/resources/NibblePoker/images/backgrounds/old-mathematics-v2-0.25.png") repeat scroll center center;
+	background: #{$color-background-main-headings} url("#{$nibblepoker-background-root}/old-mathematics-v2-0.25.png") repeat scroll center center;
 }
