--- a/resources/NibblePoker/scss/site/input.scss
+++ b/resources/NibblePoker/scss/site/input.scss
@@ -1,8 +1,8 @@
 // NibblePoker.lu CSS - (C) 2023 Bozet Herwin
 
-/* Site > Input */
+/* Site > Elements > Inputs */
 
-/* Site > Input > Commons */
+/* Site > Elements > Inputs > Commons */
 
 button, input {
 	border: 0;
@@ -21,7 +21,7 @@ button, input {
 	}
 }
 
-/* Site > Input > Buttons */
+/* Site > Elements > Inputs > Buttons */
 
 button {
 	cursor: pointer;
@@ -38,4 +38,41 @@ button {
 			background-color: #{$color-background-button-primary-hover};
 		}
 	}
+}
+
+// Ugly fix for download buttons
+button + button, .button-link + .button-link > button {
+	margin-left: 0.75rem;
+}
+
+/* Site > Elements > Inputs > Lang Selector */
+
+#lang-selector {
+	position: relative;
+	white-space: nowrap;
+	
+	> summary {
+		cursor: pointer;
+		list-style: none;
+		user-select: none;
+	}
+	
+	> div {
+		position: absolute;
+		z-index: #{$z-index-lang-dropdown};
+		top: 2rem;
+		right: 0;
+		min-width: 100%;
+		
+		// Visibility transition
+		//height: 0;
+		//transition: height 0.4s;
+		//transition-timing-function: cubic-bezier(.25,.8,.25,1.1);
+	}
+	
+	// TODO: Maybe force it to be visible when closes ?
+	
+	//&[open] > div {
+	//	height: auto;
+	//}
 }
