--- a/resources/NibblePoker/scss/core/border.scss
+++ b/resources/NibblePoker/scss/core/border.scss
@@ -12,18 +12,25 @@
 }
 
 .border {
-	border: 1px solid #{$color-border-all};
+	border: 1px solid;
 	
-	&.b-light {
-		border: 1px solid #{$color-border-light};
-	}
+	//&.b-light {
+	//	border: 1px solid #{$color-border-light};
+	//}
 }
 
-* {
-	.dark-mode & {
-		border-color: #{$color-border-all};
-	}
-}
+//main {
+//	.border {
+//		border: 1px solid #{$color-border-main};
+//	}
+//}
+
+
+//* {
+//	.dark-mode & {
+//		border-color: #{$color-border-all};
+//	}
+//}
 
 @include border-maker("t", "top");
 @include border-maker("b", "bottom");
