--- a/resources/NibblePoker/scss/site/table.scss
+++ b/resources/NibblePoker/scss/site/table.scss
@@ -25,12 +25,7 @@ table.stylish {
 		border-right: 1.5px solid #{$color-table-border};
 	}
 	
-	// Fixing border issues when using rounded corners by using a "fake" one using the background's color.
-	// It will look like utter shit when rounded on firefox because its rendering engine cannot clip rounded corners apparently.
-	// I guess that's what being at less than 3% of the market share does to you and your ability to care about basic shit.
-	&.border {
-		background-color: #{$color-border-all};
-	}
+	// See 'site/border.scss' for border fix.
 }
 
 // Applying .p-xs and .p-s to all cells if needed
@@ -53,6 +48,7 @@ table.stylish {
 	}
 }
 
+// Centers the cells' content vertically
 .table-v-center {
 	tr, td {
 		vertical-align: middle;
