--- a/resources/NibblePoker/scss/variables.scss
+++ b/resources/NibblePoker/scss/variables.scss
@@ -63,13 +63,155 @@ $color-apollo-custom-20: mix($color-apollo-39, $color-apollo-38, 60%);
 $color-apollo-custom-30: mix($color-apollo-01, $color-apollo-03, 80%);  // Primary button
 $color-apollo-custom-31: mix($color-apollo-01, $color-apollo-03, 65%);  // Primary button hover
 
-//$color-test-01: mix(#7b6aa5, #000000, 33%);
-$color-test-02: #007c7d;
+/* Variables > Palettes > Material UI */
+// https://materialui.co/colors
 
-/* Variables > Colors */
+$color-material-blueGrey-50: #eceff1;
+$color-material-blueGrey-100: #cfd8dc;
+$color-material-blueGrey-200: #b0bec5;
+$color-material-blueGrey-300: #90a4ae;
+$color-material-blueGrey-400: #78909c;
+$color-material-blueGrey-500: #607d8b;
+$color-material-blueGrey-600: #546e7a;
+$color-material-blueGrey-700: #455a64;
+$color-material-blueGrey-800: #37474f;
+$color-material-blueGrey-900: #263238;
+
+$color-material-blueGrey-1000: #151D21;
+$color-material-blueGrey-850: mix($color-material-blueGrey-800, $color-material-blueGrey-900, 50%);
+//$color-material-blueGrey-925: mix($color-material-blueGrey-1000, $color-material-blueGrey-900, 25%);
+$color-material-blueGrey-950: mix($color-material-blueGrey-1000, $color-material-blueGrey-900, 50%);
+
+/* Variables > Palettes > WinUI 3 */
+
+$color-winui-00: #191919;
+$color-winui-01: #1D1D1D;
+$color-winui-02: #202020;
+$color-winui-03: #232323;
+$color-winui-04: #272727;
+$color-winui-05: #323232;
+$color-winui-06: #3E3E3E;
+
+// https://flatuicolors.com/palette/defo
+
+/* Variables > Palettes > Misc */
+
+//$color-test-01: mix(#7b6aa5, #000000, 33%);
+//$color-test-02: #007c7d;
+
+/* Variables > Colors Mappings */
 
 $color-unset: $color-apollo-34;
-//$color-unset: deeppink;
+
+/* Variables > Theme selection */
+
+// Available themes:
+//  * Teal Supreme (teal)
+//  * WinUI 3 (winui)
+//  * La Moiti Leune (moon)
+$theme: teal;
+
+/* Variables > Colors Mappings > Backgrounds & Borders */
+
+$color-background-body: map-get((
+		teal: $color-apollo-custom-00,
+		winui: $color-winui-02,
+		moon: $color-unset,
+), $theme);
+
+$color-background-main: map-get((
+		teal: $color-apollo-custom-02,
+		winui: $color-winui-04,
+		moon: $color-unset,
+), $theme);
+
+$color-background-surround: map-get((
+		teal: $color-apollo-custom-00,
+		winui: $color-winui-02,
+		moon: $color-unset,
+), $theme);
+
+
+// FIXME: Remove its usage !
+// Left: Code, Kbd, Scrollbar ???
+$color-border-all: $color-unset;  // Default border
+$color-border-light: $color-unset;  // For .b-light class (No longer exists !)
+
+$color-border-surround: map-get((
+		teal: $color-apollo-38,
+		winui: $color-winui-01,
+		moon: $color-unset,
+), $theme);
+
+$color-border-main: map-get((
+		teal: $color-apollo-38,  // $color-apollo-custom-20;
+		winui: $color-winui-03,
+		moon: $color-unset,
+), $theme);
+
+
+$color-background-main-headings: map-get((
+		teal: $color-apollo-custom-03,
+		winui: $color-unset,
+		moon: $color-unset,
+), $theme);
+
+
+$color-background-code: map-get((
+		teal: $color-apollo-custom-20,
+		winui: $color-unset,
+		moon: $color-unset,
+), $theme);
+
+$color-border-code: map-get((
+		teal: #{$color-border-surround}CF,
+		winui: $color-unset,
+		moon: $color-unset,
+), $theme);
+
+
+$color-background-table-main: map-get((
+		teal: $color-apollo-custom-01,
+		winui: $color-unset,
+		moon: $color-unset,
+), $theme);
+
+$color-background-table-dual: map-get((
+		teal: $color-apollo-custom-00,
+		winui: $color-unset,
+		moon: $color-unset,
+), $theme);
+
+$color-table-border: map-get((
+		teal: $color-apollo-39,
+		winui: $color-unset,
+		moon: $color-unset,
+), $theme);
+
+
+$color-background-inputs: $color-apollo-40;
+
+$color-background-checkbox-checked: $color-apollo-08;
+$color-background-checkbox-unchecked: $color-apollo-27;
+
+$color-background-button: $color-apollo-40;
+$color-background-button-hover: $color-apollo-custom-10;
+
+$color-background-button-primary: #{$color-apollo-custom-30};
+$color-background-button-primary-hover: #{$color-apollo-custom-31};
+
+$color-background-button-success: #{$color-apollo-07};
+$color-background-button-success-hover: #{$color-apollo-08};
+
+$color-background-button-error: #{$color-apollo-26};
+$color-background-button-error-hover: #{$color-apollo-27};
+
+$color-background-button-warning: #{$color-apollo-20};
+$color-background-button-warning-hover: #{$color-apollo-21};
+
+
+
+/* Variables > Colors Mappings > Text */
 
 $color-text-regular-normal: $color-apollo-45;
 $color-text-inputs: $color-apollo-45;
@@ -82,8 +224,8 @@ $color-link-hover: rgb(253, 255, 251);
 $color-link-blue: #{$color-apollo-04};
 $color-link-blue-hover: #{$color-apollo-05};
 
-$color-border-all: $color-apollo-38;
-$color-border-light: $color-apollo-custom-20;
+//$color-border-all: $color-apollo-38;
+//$color-border-light: $color-apollo-custom-20;
 
 $color-input-glow: $color-apollo-02;
 
@@ -91,56 +233,13 @@ $color-wedge-blue-background: $color-apollo-03;
 $color-wedge-blue-border: $color-apollo-02;
 
 //$color-background-body: $color-apollo-custom-00;
-//$color-background-main: $color-apollo-39;
-////$color-background-surround: $color-apollo-40;
+//$color-background-main: $color-apollo-custom-02;
 //$color-background-surround: $color-apollo-custom-00;
-$color-background-body: $color-apollo-custom-00;
-$color-background-main: $color-apollo-custom-02;
-$color-background-surround: $color-apollo-custom-00;
-
-// TMP
-//$color-background-main: mix(#333c57, #566c86, 60%);
-//$color-background-surround: mix(#333c57, #566c86, 80%);
-
-//$color-background-main-headings: $color-apollo-40;
-$color-background-main-headings: $color-apollo-custom-03;
-
-$color-background-code: #{$color-apollo-custom-20};
-$color-border-code: #{$color-border-all}CF;
-
-$color-background-table-main: $color-apollo-custom-01;
-$color-background-table-dual: $color-apollo-custom-00;
-//$color-table-border: $color-apollo-41;
-$color-table-border: $color-apollo-39;
-
-$color-background-inputs: $color-apollo-40;
-$color-background-button: $color-apollo-40;
-$color-background-button-hover: $color-apollo-custom-10;
-
-$color-background-button-primary: #{$color-apollo-custom-30};
-$color-background-button-primary-hover: #{$color-apollo-custom-31};
-
-$_color-white-lighter: rgb(253, 255, 251);
-$_color-white-light: rgb(235, 237, 233);
-$_color-white-medium: rgb(217, 222, 218);
-$_color-white-dark: rgb(199, 207, 204);
-
-$_color-black-lighter: rgb(43, 46, 51);
-$_color-black-light: rgb(37, 40, 45);
-$_color-black-medium: rgb(31, 34, 39);
-$_color-black-dark: rgb(25, 28, 32);
-$_color-black-full: rgb(13, 14, 26);
-
-$_color-text-white-065: rgba(255, 255, 255, 0.65);
-$_color-text-white-075: rgba(255, 255, 255, 0.75);
-$_color-text-white-085: rgba(255, 255, 255, 0.85);
-
-$_color-blue-light: #4f6dce;
-$_color-blue-medium: #3b5dc8;
-$_color-blue-dark: #3353b6;
-
-$_color-white-muted: #FFFFFF96;
-//rgba(255, 255, 255, 0.6)
+//
+//// TMP V2
+//$color-background-body: $color-material-blueGrey-900;
+//$color-background-main: $color-material-blueGrey-950;
+//$color-background-surround: $color-material-blueGrey-900;
 
 
 /* Variables > Scrollbar */
