--- a/tools/items/formula-wizard/styles.css
+++ b/tools/items/formula-wizard/styles.css
@@ -19,3 +19,26 @@
 .fw-workbench-name {
     border-bottom: 1px solid;
 }
+
+.fw-workbench-io-grid {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: auto;
+    gap: 0 0;
+    grid-template-areas: ". . .";
+}
+
+/* Thin desktop */
+@media only screen and (max-width: 992px) {
+    .fw-workbench-io-grid {
+        grid-template-columns: 50% 50%;
+        grid-template-areas: ". .";
+    }
+}
+/* Mobile */
+@media only screen and (max-width: 768px) {
+    .fw-workbench-io-grid {
+        grid-template-columns: 100%;
+        grid-template-areas: ".";
+    }
+}
